[gd_scene load_steps=6 format=3 uid="uid://gxm4bjrw15kx"]

[ext_resource type="Script" uid="uid://4m66l8i857h3" path="res://src/main.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://bnnsu1kcro0jt" path="res://src/trajectory_path.gd" id="2_0wfyh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o5qli"]
albedo_color = Color(0.266667, 0.517647, 0.376471, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_o5qli"]
size = Vector3(15.8809, 1, 16.1152)

[sub_resource type="LabelSettings" id="LabelSettings_o5qli"]
font_size = 69
font_color = Color(0.553314, 0.191026, 0, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_0wfyh")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.695913, 0.718126, 0, -0.718126, 0.695913, 0, 9.71932, 7.88425)
projection = 1
size = 7.667

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.483817, 0.875169, 0, -0.875169, 0.483817, 0, 11.1758, 0)

[node name="floor" type="StaticBody3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="floor"]
size = Vector3(15.9531, 1, 16.0889)
material = SubResource("StandardMaterial3D_o5qli")

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor"]
shape = SubResource("BoxShape3D_o5qli")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="mode_1" type="Button" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 136.0
offset_bottom = 47.0
text = "mode 1
"

[node name="mode_2" type="Button" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 64.0
offset_right = 136.0
offset_bottom = 95.0
text = "mode 2"

[node name="mode_3" type="Button" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 112.0
offset_right = 136.0
offset_bottom = 143.0
text = "mode 3"

[node name="mode_4" type="Button" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 160.0
offset_right = 136.0
offset_bottom = 191.0
text = "mode 4
"

[node name="sumUp" type="Label" parent="CanvasLayer"]
offset_left = 160.0
offset_top = 16.0
offset_right = 280.0
offset_bottom = 48.0
text = "side 1: "

[node name="sumDown" type="Label" parent="CanvasLayer"]
offset_left = 160.0
offset_top = 48.0
offset_right = 280.0
offset_bottom = 80.0
text = "side 2: "

[node name="WhiteFlash" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2

[node name="CenterText" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -36.0
offset_right = 120.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "1"
label_settings = SubResource("LabelSettings_o5qli")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CapsContainer" type="Node3D" parent="."]

[node name="TrajectoryPath" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="TrajectoryPath"]
script = ExtResource("2_0wfyh")
